Quick capture - files in flux

--- a/Dockerfile.alpine.rdp
+++ b/Dockerfile.alpine.rdp
@@ -6,4 +6,4 @@ RUN apk add -y freerdp
 #RUN yum install -y remmina remmina-plugin-rdp
 
 ENTRYPOINT ["/usr/bin/xfreerdp"]
-CMD ["/bin/bash"]
+CMD [""]
